# final_project_oop_cpp

./: CMakeLists.txt  main.cpp
include/: list.hpp
locales/: en.txt
models/: folder.cpp  folder.hpp  question.cpp  question.hpp  quiz.cpp  quiz.hpp  user.cpp  user.hpp  word.cpp  word.hpp
services/: auth_service.cpp  auth_service.hpp  console_service.cpp  console_service.hpp  file_manager.cpp  file_manager.hpp  menu_service.cpp  menu_service.hpp
